<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kr210_arm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="newtonjeri@todo.todo">newtonjeri</maintainer>
  <license>TODO: License declaration</license>


    <url type="website">http://ros.org/wiki/gazebo_ros_control</url>
  <url type="bugtracker">https://github.com/ros-controls/gazebo_ros2_control/issues</url>
  <url type="repository">https://github.com/ros-controls/gazebo_ros2_control</url>

  <author>Alejandro Hernández</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rclpy_action</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
